# WeatherInfoApp

./: README.md
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/weatherapp/: MainActivity.kt
app/src/main/java/com/example/weatherapp/data/local/: UserPreferences.kt
app/src/main/java/com/example/weatherapp/data/model/: Clouds.kt  Coord.kt  Main.kt  Sys.kt  Weather.kt  WeatherResponse.kt  Wind.kt
app/src/main/java/com/example/weatherapp/data/remote/: WeatherApi.kt
app/src/main/java/com/example/weatherapp/data/repository/: WeatherRepository.kt
app/src/main/java/com/example/weatherapp/di/: ApiKeys.kt  AppModule.kt  NetworkModule.kt  RepositoryModule.kt
app/src/main/java/com/example/weatherapp/ui/theme/screen/: WeatherScreen.kt
app/src/main/java/com/example/weatherapp/ui/theme/uiComponents/: WeatherSearchBar.kt
app/src/main/java/com/example/weatherapp/ui/theme/utils/: AppExtensions.kt  LocationUtils.kt  ValidationUtils.kt
app/src/main/java/com/example/weatherapp/ui/theme/viewmodel/: WeatherViewModel.kt
app/src/test/java/com/example/weatherapp/ui/theme/: WeatherViewModelTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
